--- a/2013-2/handout_linux_2013-2.tex
+++ b/2013-2/handout_linux_2013-2.tex
@@ -1,13 +1,45 @@
 \documentclass{handout_utfpr}
 
+\usepackage{xspace}
+\usepackage{pbox}
 \usepackage[brazil]{babel}
-\usepackage[utf8]{inputenc}
+\usepackage{xcolor}
+\definecolor{dark-gray}{gray}{0.20}
+\definecolor{light-gray}{gray}{0.85}
+
+\newcommand{\com}[1]{
+\colorbox{light-gray}{\texttt{\pbox{\textwidth}{\$ #1}}}
+}
 
 \handoutdate{\today}
 
 \begin{document}
 \maketitle
 \section{Introdução}
+
+
+
+\section{Comandos da CLI}
+
+Como um guia, todas as linhas de comando terão o caracter \$ no começo, apenas para indicar a linha onde será digitado o comando em questão. O caracter deve ser ignorado.\\
+
+Para saber em qual pasta você está trabalhando na linha de comando, digite \textbf{pwd}, que significa ``print working directory''.\\
+
+\com{pwd\\/home/usuario}\\
+
+A mudança de diretórios, ou seja, pastas, deve ser feita através do comando \textbf{cd} (``change directory''). Há alguns atalhos que podem ser utilizados na mudança de diretórios: o \textbf{$\sim$} é um atalho para o ``/home/usuario'', um \textbf{.} significa o diretório atual e \textbf{..} é equivalente ao diretório anterior.\\
+
+\com{cd /home/usuario/Área\textbackslash\xspace de\textbackslash\xspace Trabalho\\\$ cd ..\\\$ pwd\\/home/usuario\\\$ cd ./Área\textbackslash\xspace de\textbackslash\xspace Trabalho\\\$ pwd\\/home/usuario/Área\textbackslash\xspace de\textbackslash\xspace Trabalho}\\
+
+Você pode criar uma pasta usando o \textbf{mkdir} (``make directory''). Lembre-se que sempre que você não souber em que pasta você está, você pode utilizar o pwd.\\
+
+\com{cd /tmp/\\\$ mkdir NovaPasta\\\$ mkdir NovaPasta/Pasta2}\\
+
+Se você desejar saber o conteúdo de uma pasta, basta utilizar o comando \textbf{ls} (``list'').
+
+
+
+
 
 
 \end{document}
