--- a/2013-2/handout_linux_2013-2.tex
+++ b/2013-2/handout_linux_2013-2.tex
@@ -18,7 +18,7 @@ Este material é apresentado como parte de uma série de minicursos que serão m
 
 Os conteúdos são dispostos aqui apenas como um apanhado geral com o objetivo de prover um embasamento mínimo e recomenda-se que outras fontes de pesquisa sejam utilizadas para o aprofundamento nestes assuntos.
 
-\section{Unix}
+\subsection{Unix}
 O sistema \textbf{Unix} é um sistema operacional desenvolvido por Ken Thompson, Dennis Richie, Douglas McIlroy e Joe Ossanna em 1970, na American Telephone \& Telegraph Company (AT\&T).
 
 Este sistema foi projetado para ser portável, multi-tarefa e multi-usuário. Sistemas Unix são caracterizados por vários conceitos, como o uso de arquivos de texto para guardar dados, um sistema de arquivos hierárquico, o tratamento de certos dispositivos como arquivos (sec tal) e a idéia de que é melhor ter vários programas pequenos, cada um desempenhando uma única tarefa, de forma que eles possam ser encadeados para realizar uma tarefa maior do que o uso de um só programa que possua todas as funcionalidades. Estes conceitos são conhecidos como a ``filosofia Unix''.
@@ -27,7 +27,7 @@ Este sistema foi projetado para ser portável, multi-tarefa e multi-usuário. Si
 
 % Under Unix, the operating system consists of many utilities along with the master control program, the kernel. The kernel provides services to start and stop programs, handles the file system and other common "low level" tasks that most programs share, and schedules access to avoid conflicts when programs try to access the same resource or device simultaneously. To mediate such access, the kernel has special rights, reflected in the division between user-space and kernel-space.
 
-\section{Linux}
+\subsection{Tanenbaum e o MINIX}
 Em 1987, Andrew S. Tanenbaum, enquanto professor da Vrije Universiteit em Amsterdã, desenvolveu o \textbf{MINIX} (mini-Unix), um sistema que seguia os mesmos princípios do Unix mas que seria usado somente propósitos educacionais, como material de apoio ao seu livro ``Operating Systems: Design and Implementation'' (em português: ``Sistemas Operacionais: Projeto e Implementação'').
 
 Os princípios aplicados por Tanenbaum no MINIX, influenciaram um de seus alunos, Linus Torvalds quando da criação de seu próprio sistema operacional, que mais tarde se tornaria o kernel do \textbf{Linux}.
@@ -44,7 +44,33 @@ Os princípios aplicados por Tanenbaum no MINIX, influenciaram um de seus alunos
 
 % —Linus Torvalds}
 
-\subsection{Virtual Machine}
+\section{Conhecendo o Linux}
+
+\subsection{GNU/Linux}
+blabvlabla gnu
+
+\subsection{O kernel}
+O kernel é a parte do sistema que faz a ponte entre os recursos de \textit{hardware}, como CPU, dispositivos de entrada e saída e memória; e a camada de \textit{software}.
+
+Numa configuração monolítica (Linux, Windows, etc), os programas rodam em ``espaço de usuário'', o que significa que um programa usa apenas o espaço de memória reservado a ele e não possui acesso direto a recursos do sistema. Para que um programa efetue uma ação como por exemplo exibir uma mensagem na tela, é necessário que uma ``chamada de sistema'' seja feita através do kernel, já que o programa não tem acesso à placa gráfica do computador.
+
+A figura a seguir exemplifica a arquitetura básica de um sistema Linux:
+\begin{figure}[!h]
+  \centering
+  \includegraphics[scale=.8]{kernel.jpg}
+  \caption{Arquitetura de um sistema GNU/Linux}
+  \label{fig:kernel}
+\end{figure}
+Na camada superior, em espaço de usuário, estão as aplicações de usuário e a biblioteca GNU. Estas aplicações interagem com o kernel através de uma interface de chamadas de sistema. O kernel, por sua vez, faz acesso ao hardware.
+
+\subsection{Distribuições}
+
+\subsection{}
+
+
+\subsection{Como obter?}
+
+\subsubsection{Virtual Machine}
 Uma máquina virtual (\textbf{VM}) é um computador fictício, baseado somente em \emph{software}. A VM funciona como um emulador, reproduzindo a arquitetura e funcionalidades de um computador de verdade.
 Instalar o Linux em uma VM garante a utilização de programas e aplicações como se instalássemos direto no computador, entretanto diminuindo a eficiência, já que estamos tentando utilizar um sistema operacional a partir de outro.
 
