--- a/2013-2/handout_linux_2013-2.tex
+++ b/2013-2/handout_linux_2013-2.tex
@@ -33,7 +33,7 @@ Este sistema foi projetado para ser portável, multi-tarefa e multi-usuário. Si
 \subsection{Tanenbaum e o MINIX}
 Em 1987, Andrew S. Tanenbaum, enquanto professor da Vrije Universiteit em Amsterdã, desenvolveu o \textbf{MINIX} (mini-Unix), um sistema que seguia os mesmos princípios do Unix mas que seria usado somente propósitos educacionais, como material de apoio ao seu livro ``Operating Systems: Design and Implementation'' (em português: ``Sistemas Operacionais: Projeto e Implementação'').
 
-Os princípios aplicados por Tanenbaum no MINIX, influenciaram um de seus alunos, Linus Torvalds quando da criação de seu próprio sistema operacional, que mais tarde se tornaria o kernel do \textbf{Linux}.
+Os princípios aplicados por Tanenbaum no MINIX, influenciaram um de seus alunos, Linus Torvalds quando da criação de seu próprio sistema operacional, que mais tarde se tornaria o \textit{kernel} do \textbf{Linux}.
 
 % No final do desenvolvimento de seu sistema, Linus compartilhou em um fórum o que havia feito:
 
@@ -50,12 +50,16 @@ Os princípios aplicados por Tanenbaum no MINIX, influenciaram um de seus alunos
 \section{Conhecendo o Linux}
 
 \subsection{GNU/Linux}
-blabvlabla gnu
+Embora a maioria das pessoas conheça apenas o termo Linux, a nomenclatura mais acurada para o sistema que se usa nos dias de hoje é ``GNU/Linux''. Isso se dá devido ao fato de que a maioria das distribuições Linux (vide \ref{distro}) na verdade contêm o \textit{kernel} (vide \ref{kernel}) do Linux em conjunto com \textit{softwares} GNU.
 
-\subsection{O kernel}
-O kernel é a parte do sistema que faz a ponte entre os recursos de \textit{hardware}, como CPU, dispositivos de entrada e saída e memória; e a camada de \textit{software}.
+O projeto GNU foi iniciado em setembro de 1983 por Richard Stallman, enquanto trabalhava no laboratório de inteligência artificial do Massachusetts Institute of Technology (MIT). O intuito do projeto é criar um ambiente de colaboração em que usuários de computadores possam ter acesso a programas que são distribuídos juntamente com o seu código-fonte (\textit{software} livre). A idéia da disseminação do \textit{software} livre é dar aos seus usuários total controle sobre os programas que são utilizados, ao contrário do \textit{software} proprietário, em que é provido o executável, mas não há como realizar modificações, nem mesmo saber o conteúdo do código que gerou o mesmo.
 
-Numa configuração monolítica (Linux, Windows, etc), os programas rodam em ``espaço de usuário'', o que significa que um programa usa apenas o espaço de memória reservado a ele e não possui acesso direto a recursos do sistema. Para que um programa efetue uma ação como por exemplo exibir uma mensagem na tela, é necessário que uma ``chamada de sistema'' seja feita através do kernel, já que o programa não tem acesso à placa gráfica do computador.
+Juntamente com o projeto GNU, foi criada o movimento ``Free software'' e a instituição de fins não lucrativos ``Free software foundation'', que atualmente, entre outras atividades, administra o projeto GNU e as licenças GNU (vide cite gnu).
+
+\subsection{O kernel}\label{kernel}
+O \textit{kernel} é a parte do sistema que faz a ponte entre os recursos de \textit{hardware}, como memória, CPU, dispositivos de entrada e saída; e a camada de \textit{software}.
+
+Numa configuração monolítica (Linux, Windows, etc), os programas rodam em ``espaço de usuário'', o que significa que um programa usa apenas o espaço de memória reservado a ele e não possui acesso direto a recursos do sistema. Para que um programa efetue uma ação como por exemplo exibir uma mensagem na tela, é necessário que uma ``chamada de sistema'' seja feita através do \textit{kernel}, já que o programa não tem acesso à placa gráfica do computador.
 
 A figura a seguir exemplifica a arquitetura básica de um sistema Linux:
 \begin{figure}[!h]
@@ -64,12 +68,19 @@ A figura a seguir exemplifica a arquitetura básica de um sistema Linux:
   \caption{Arquitetura de um sistema GNU/Linux}
   \label{fig:kernel}
 \end{figure}
-Na camada superior, em espaço de usuário, estão as aplicações de usuário e a biblioteca GNU. Estas aplicações interagem com o kernel através de uma interface de chamadas de sistema. O kernel, por sua vez, faz acesso ao hardware.
+Na camada superior, em espaço de usuário, estão as aplicações de usuário e a biblioteca GNU. Estas aplicações interagem com o \textit{kernel} através de uma interface de chamadas de sistema. O \textit{kernel}, por sua vez, faz acesso ao hardware.
 
-\subsection{Distribuições}
+\subsection{Distribuições}\label{distro}
+Como visto anteriormente, o que se conhece popularmente como Linux, é na verdade apenas o \textit{kernel}. Então, para que possamos ter um sistema funcionando, é necessário fazer a escolha de uma ``distribuição''. Distribuições nada mais são que o \textit{kernel} do Linux juntamente com alguns outros \textit{softwares} (em sua maioria GNU, mas não necessariamente) que dão funcionalidade ao sistema.
 
-\subsection{}
+Algumas distribuições mais comuns são: Ubuntu, Debian, Fedora, entre várias outras.
 
+O conceito de distribuição (também chamadas de ``distro'') geralmente gera alguma confusão entre os usuários de Linux, já que todos os softwares com os quais a pessoa está interagindo no uso cotidiano do sistema são na verdade softwares que são providos pela distribuição. Isto faz com que um usuário, ao experimentar várias distros em seu computador, não perceba que na verdade, o \textit{kernel} rodando por baixo da camada de software de usuário é o mesmo para todas as distribuições.
+
+\subsubsection{Desktop Environments e Window Managers}
+Outra distinção importante que deve ser feita é quanto ao conceito de Desktop Environments (ambientes de desktop) e Window Managers (gerenciadores de janelas). Falando de maneira grosseira, Desktop Environments são a parte da distribuição responsável por partes do sistema como o ``menu iniciar'', gerenciamento de sessão e o próprio desktop. Os Window Managers são a parte que gerencia a aparência das janelas e o comportamento de funções como a troca de janelas (alt + Tab).
+
+A maioria das distribuições já provê um DE e um WM, porém algumas delas trazem apenas os programas essenciais, ficando a instalação da parte gráfica a cargo do usuário. É importante entender a diferença entre distro, desktop environment e window manager para que no caso de um problema ou caso alguma funcionalidade não lhe agrade, você saiba exatamente em qual parte do sistema está o problema.
 
 \subsection{Como obter?}
 
