handout menos conclusão

--- a/2013-2/handout_linux_2013-2.bib
+++ b/2013-2/handout_linux_2013-2.bib
@@ -16,3 +16,54 @@
   year={2012},
   publisher={No Starch Press}
 }
+
+@misc{anatomy2007,
+	type = {{CT316}},
+author = {IBM},
+	title = {Anatomy of the Linux kernel},
+	copyright = {© Copyright {IBM} Corporation 2007},
+	url = {http://www.ibm.com/developerworks/library/l-linux-kernel/},
+	language = {en},
+	urldate = {2013-10-08},
+	month = jun,
+	year = {2007},
+	keywords = {{SWGC0}},
+	file = {Snapshot:/home/fabiano/.zotero/zotero/ru3nfjod.default/zotero/storage/KFNMN99D/l-linux-kernel.html:text/html}
+},
+
+@misc{gnu.org,
+	title = {gnu.org},
+	url = {https://www.gnu.org/gnu/linux-and-gnu.html},
+	urldate = {2013-10-08},
+	file = {Snapshot:/home/fabiano/.zotero/zotero/ru3nfjod.default/zotero/storage/ZG9MN9EF/linux-and-gnu.html:text/html}
+},
+
+@misc{learn2012,
+	type = {{CT316}},
+author = {IBM},
+	title = {Learn Linux, 101: A roadmap for {LPIC-1}},
+	copyright = {© Copyright {IBM} Corporation 2009, 2012},
+	shorttitle = {Learn Linux, 101},
+	url = {http://www.ibm.com/developerworks/linux/library/l-lpic1-v3-map/index.html},
+	language = {en},
+	urldate = {2013-10-09},
+	month = dec,
+	year = {2012},
+	keywords = {{SWGC0}},
+	file = {Snapshot:/home/fabiano/.zotero/zotero/ru3nfjod.default/zotero/storage/CCAGZ233/index.html:text/html}
+},
+
+@misc{linux2013,
+	title = {Linux kernel},
+author = {Wikipedia},
+	copyright = {Creative Commons Attribution-{ShareAlike} License},
+	url = {http://en.wikipedia.org/w/index.php?title=Linux\_kernel\&oldid=576143299},
+	abstract = {The Linux kernel is the operating system kernel used by the Linux family of Unix-like operating systems.[9] It is a prominent example of free and open source software.[10]},
+	language = {en},
+	urldate = {2013-10-08},
+	journal = {Wikipedia, the free encyclopedia},
+	month = oct,
+	year = {2013},
+	note = {Page Version {ID:} 576143299},
+	file = {Snapshot:/home/fabiano/.zotero/zotero/ru3nfjod.default/zotero/storage/NRXKQH24/index.html:text/html}
+}
