--- a/2013-2/handout_linux_2013-2.tex
+++ b/2013-2/handout_linux_2013-2.tex
@@ -66,7 +66,7 @@ O \textit{kernel} é a parte do sistema que faz a ponte entre os recursos de \te
 
 Numa configuração monolítica (Linux, Windows, etc), os programas rodam em ``espaço de usuário'', o que significa que um programa usa apenas o espaço de memória reservado a ele e não possui acesso direto a recursos do sistema. Para que um programa efetue uma ação como por exemplo exibir uma mensagem na tela, é necessário que uma ``chamada de sistema'' seja feita através do \textit{kernel}, já que o programa não tem acesso à placa gráfica do computador.
 
-A figura a seguir exemplifica a arquitetura básica de um sistema Linux:
+A figura \ref{fig:kernel} exemplifica a arquitetura básica de um sistema Linux:
 \begin{figure}[!h]
   \centering
   \includegraphics[scale=.8]{kernel.jpg}
@@ -115,7 +115,7 @@ Uma máquina virtual (\textbf{VM}) é, como o nome indica, um computador virtual
   \label{fig:vm}
 \end{figure}
 
-Observe a imagem \ref{fig:vm} acima. Nela pode-se ver um sistema Windows servindo como base para outro sistema Windows rodando dentro da VM. O sistema que está dentro da VM não afeta de maneira alguma o sistema base. Desta forma, já que a VM nada mais é que um \textit{software} rodando em um sistema qualquer, podemos levantar as seguintes vantagens de seu uso:
+Observe a imagem \ref{fig:vm}. Nela pode-se ver um sistema Windows servindo como base para outro sistema Windows rodando dentro da VM. O sistema que está dentro da VM não afeta de maneira alguma o sistema base. Desta forma, já que a VM nada mais é que um \textit{software} rodando em um sistema qualquer, podemos levantar as seguintes vantagens de seu uso:
 
 \begin{itemize}
 \item Nada que seja feito no sistema virtual afetará o sistema real.
