seção passos seguintes

--- a/2013-2/handout_linux_2013-2.tex
+++ b/2013-2/handout_linux_2013-2.tex
@@ -5,6 +5,7 @@
 \usepackage[brazil]{babel}
 \usepackage{xcolor}
 \usepackage[alf]{abntex2cite}
+\usepackage{url}
 \definecolor{dark-gray}{gray}{0.20}
 \definecolor{light-gray}{gray}{0.85}
 
@@ -201,7 +202,7 @@ Se você desejar saber o conteúdo de uma pasta, basta utilizar o comando \textb
 
 \com{cd /tmp/\\\$ ls\\NovaPasta\\\$ cd NovaPasta\\\$ ls\\Pasta2}\\
 
-Para remover uma pasta, um simples comando pode ser usado, o \textbf{rmdir}, porém a pasta só será removida se ela estiver vazia, caso contrário uma mensagem de erro aparecerá na tela. No nosso exemplo, podemos excluir a Pasta2 dessa forma:\\
+Para remover uma pasta, um simples comando pode ser usado, o \textbf{rmdir} (``remove directory''), porém a pasta só será removida se ela estiver vazia, caso contrário uma mensagem de erro aparecerá na tela. No nosso exemplo, podemos excluir a Pasta2 dessa forma:\\
 
 \com{cd /tmp/\\\$ rmdir ./NovaPasta/Pasta2}\\
 
@@ -239,8 +240,13 @@ Há outros comandos que são interessantes:
 \end{itemize}
 
 \section{Passos seguintes}
+Como já mencionado anteriormente, os conceitos aqui apresentados servem apenas como um direcionamento inicial. Espera-se que o leitor continue a buscar fundamentação teórica sobre o uso e funcionamento de sistemas operacionais como um todo. As referências apresentadas a seguir podem servir como um ponto de partida.
 
+Recomenda-se que o usuário experimente com várias instalações e configurações de sistema diferentes e que durante o seu processo de aprendizagem faça uso intensivo de sites de busca e dos manuais e outros tipos de documentação disponíveis na Internet. O uso das máquinas virtuais como um ``local seguro'' para experimentos também é incentivado.
 
+Outro ponto importante de ser ressaltado é que embora, em alguns momentos, o uso de sistemas Unix e software livre em geral possa parecer difícil ou complicado, o conhecimento e aprofundamento nestes tópicos com certeza trará frutos para sua vida acadêmica e profissional.
+
+Desta forma, os autores deste documento colocam-se à disposição para o esclarecimento de dúvidas e suporte de maneira geral através da lista de emails \url{psl_pg@googlegroups.com}.
 
 \nocite{Tanenbaum:2007:MOS:1410217}
 \nocite{shotts2012linux}
