criacao da pasta imagens e modificações relacionadas

--- a/2013-2/handout_linux_2013-2.tex
+++ b/2013-2/handout_linux_2013-2.tex
@@ -70,7 +70,7 @@ Numa configuração monolítica (Linux, Windows, etc), os programas rodam em ``e
 A figura \ref{fig:kernel} exemplifica a arquitetura básica de um sistema Linux:
 \begin{figure}[!h]
   \centering
-  \includegraphics[scale=.8]{kernel.jpg}
+  \includegraphics[scale=.8]{imagens/kernel.jpg}
   \caption{Arquitetura de um sistema GNU/Linux}
   \label{fig:kernel}
 \end{figure}
@@ -111,7 +111,7 @@ Uma máquina virtual (\textbf{VM}) é, como o nome indica, um computador virtual
 
 \begin{figure}[!h]
   \centering
-  \includegraphics[scale=.3]{vm.jpg}
+  \includegraphics[scale=.3]{imagens/vm.jpg}
   \caption{Exemplo do uso de uma máquina virtual}
   \label{fig:vm}
 \end{figure}
