--- a/2013-2/slides_linux_2013-2.tex
+++ b/2013-2/slides_linux_2013-2.tex
@@ -45,7 +45,7 @@ style=paintings
 \usepackage[utf8]{inputenc}
 \usepackage{xcolor}
 \title{Introdução ao Linux}
-%\author{DaFabiano Rosas}
+
 \date{Outubro, 2013}
 
 \newenvironment{vslide}{\vspace{\stretch{1}}}{\vspace{\stretch{1}}}
@@ -61,11 +61,11 @@ style=paintings
 Ken Thompson
 
 \vspace{.5cm}
-Dennis Ritchie 
+Dennis Ritchie
 }
 {
    \begin{figure}[!h]
-  \includegraphics[scale=0.2]{att}  
+  \includegraphics[scale=0.2]{imagens/att}
    \end{figure}
 }
 
@@ -122,10 +122,6 @@ O Linux que conhecemos na verdade é o \textbf{GNU/Linux}.
 A maioria das distribuições utilizam o \textit{kernel} do Linux em conjunto com \textit{softwares} GNU.
 \end{vslide}
 
-   \begin{figure}[!h]
- % \includegraphics[scale=0.2]{gnulinux}  
-   \end{figure}
-
 \end{slide}
 
 \begin{slide}{Projeto GNU}
@@ -147,7 +143,7 @@ Stallman também criou a ``Free Software Foundation'' que administra as licença
 
 
    \begin{figure}[!h]
-  \includegraphics[scale=.8]{kernel1}  
+  \includegraphics[scale=.8]{imagens/kernel1}
    \end{figure}
 
 \end{slide}
@@ -160,7 +156,7 @@ O que se conhece popularmente como Linux, é na verdade apenas o \textit{kernel}
 Distribuições nada mais são que o \textit{kernel} do Linux juntamente com alguns outros \textit{softwares} (em sua maioria GNU, mas não necessariamente) que dão funcionalidade ao sistema.
 
    \begin{figure}[!h]
-  \includegraphics[scale=0.4]{distro}  
+  \includegraphics[scale=0.4]{imagens/distro}
    \end{figure}
 \end{vslide}
 \end{slide}
@@ -168,21 +164,21 @@ Distribuições nada mais são que o \textit{kernel} do Linux juntamente com alg
 \begin{slide}{Desktop Environment}
   \centering
    \begin{figure}[!h]
-  \includegraphics[scale=0.28]{gnome}
+  \includegraphics[scale=0.28]{imagens/gnome}
    \end{figure}
 \end{slide}
 
 \begin{slide}{Desktop Environment}
   \centering
    \begin{figure}[!h]
-  \includegraphics[scale=0.3]{xfce}
+  \includegraphics[scale=0.3]{imagens/xfce}
    \end{figure}
 \end{slide}
 
 \begin{slide}{Desktop Environment}
   \centering
    \begin{figure}[!h]
-  \includegraphics[scale=0.28]{cinnamon}
+  \includegraphics[scale=0.28]{imagens/cinnamon}
    \end{figure}
 \end{slide}
 
