definicao inicial das secoes

--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -22,7 +22,16 @@
 \begin{document}
 \maketitle
 
+\input{contents/intro} %Introdução a typesetting
 
-\bibliography{handout_latex_2013-2}
+\input{contents/problemas} %Problemas comuns dos editores WYSIWYG
+
+\input{contents/tex} %TeX ao resgate!
+
+\input{contents/inst} %Básicos da instalação
+
+\input{contents/pratica} %Parte prática:
+
+\bibliography{contents/handout_latex_2013-2}
 
 \end{document}
