--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -17,6 +17,10 @@
 \colorbox{light-gray}{\texttt{\pbox{\textwidth}{#1}}}
 }
 
+\subjnum{CC31C}
+\subject{Introdução à Ciência da Computação}
+\subjelab{Introdução ao \LaTeX}
+
 \handoutdate{\today}
 
 \begin{document}
