introdução à escrita científica

--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -32,7 +32,7 @@ Este material é apresentado como parte de uma série de minicursos que serão m
 
 Os conteúdos são dispostos aqui apenas como um apanhado geral com o objetivo de prover um embasamento mínimo e recomenda-se que outras fontes de pesquisa sejam utilizadas para o aprofundamento nestes assuntos.
 
-\input{contents/intro} %Introdução a typesetting
+\input{contents/intro_writing} %Introdução à escrita científica
 
 \input{contents/problemas} %Problemas comuns dos editores WYSIWYG
 
