--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -34,14 +34,16 @@ Os conteúdos são dispostos aqui apenas como um apanhado geral com o objetivo d
 
 \input{contents/intro_writing} %Introdução à escrita científica
 
-\input{contents/problemas} %Problemas comuns dos editores WYSIWYG
-
 \input{contents/tex} %TeX ao resgate!
+
+\input{contents/problemas} %Problemas comuns dos editores WYSIWYG (talvez fique apenas na apresentação, acho que essa seção é mais visual)
 
 \input{contents/inst} %Básicos da instalação
 
 \input{contents/pratica} %Parte prática:
 
+
+\nocite{_transition}
 \bibliography{contents/handout_latex_2013-2}
 
 \end{document}
