--- a/2013-2/contents/intro_writing.tex
+++ b/2013-2/contents/intro_writing.tex
@@ -1,8 +1,20 @@
 \subsection{A escrita científica}
-A necessidade da escrita científica é constante. No ambiente acadêmico, ela é tida como o principal meio de troca de informações %entre as diferentes partes envolvidas 
-no processo de difusão do conhecimento. Autores a utilizam em seus livros, pesquisadores divulgam suas descobertas através da publicação em revistas científicas, professores avaliam o desempenho de seus alunos em avaliações escritas e os próprios acadêmicos a utilizam durante seus estudos. Na indústria, a escrita é valorizada na forma de relatórios técnicos, documentação de software e especificação de produtos.
+A necessidade da escrita científica é constante. Na universidade, ela é tida como o principal meio de troca de informações %entre as diferentes partes envolvidas 
+no processo de difusão do conhecimento. Autores a utilizam em seus livros, pesquisadores divulgam suas descobertas através da publicação em revistas científicas, professores verificam o desempenho de seus alunos em avaliações escritas e os próprios acadêmicos a utilizam durante seus estudos. Na indústria, a escrita é valorizada na forma de relatórios técnicos, documentação de software e especificação de produtos.
 
-Devido à sua importância, é natural que existam certas diretivas para se produzir um texto de forma correta e aqueles que não estão habituados a estas regras muitas vezes encontram dificuldades. Um problema frequente é o da apresentação visual dos documentos. Na academia, o interesse está no conteúdo de um trabalho e não em sua estética. Os artigos devem ser formatados seguindo uma norma padrão, geralmente definida pela instituição. 
+Devido à sua importância, é natural que existam certas diretivas para se produzir um texto de forma correta e aqueles que não estão habituados a estas regras muitas vezes encontram dificuldades. Um problema frequente é o da apresentação visual dos documentos. No ambiente acadêmico, o interesse está no conteúdo de um trabalho e não em sua estética. Os artigos devem ser formatados seguindo uma norma padrão, geralmente definida pela instituição ou evento/revista no qual o trabalho está sendo divulgado. 
 
-A normas são definidas não de maneira aleatória, mas levando em consideração vários fatores como legibilidade do texto, tamanho do documento, local de publicação, presença de fórmulas matemáticas ou imagens, etc. Sendo assim, a formatação de um documento acaba ocupando uma grande parte do tempo dedicado à escrita e a utilização de ferramentas que automatizem e facilitem este processo são sempre bem vindas.
+\subsection{Normas para escrita de trabalhos científicos}
+A normas são definidas não de maneira aleatória, mas levando em consideração vários fatores como legibilidade do texto, tamanho do documento, local de publicação, presença de fórmulas matemáticas ou imagens, etc. Alguns dos detalhes presentes nas normas para escrita de artigos e trabalhos acadêmicos são:
+
+\begin{itemize}
+\item Requisitos com relação à fontes.
+\item Requisitos com relação à disposição de parágrafos e seções.
+\item Exibição de fórmulas e figuras.
+\item Formatação de sumário.
+\item Bibliografia.
+\end{itemize}
+
+Estes são apenas alguns dos detalhes que são exigidos e fica claro que a correta formatação de um documento é um processo que acaba ocupando uma grande parte do tempo dedicado à escrita do mesmo e a utilização de ferramentas que automatizem e facilitem este processo são sempre bem vindas. Uma destas ferramentas é o \LaTeX.
+
 
