included pdfpages package

--- a/2013-2/handout_latex_2013-2.tex
+++ b/2013-2/handout_latex_2013-2.tex
@@ -5,6 +5,7 @@
 \usepackage[brazil]{babel}
 \usepackage{xcolor}
 \usepackage[alf]{abntex2cite}
+\usepackage{pdfpages}
 \usepackage{url}
 \definecolor{dark-gray}{gray}{0.20}
 \definecolor{light-gray}{gray}{0.85}
@@ -31,6 +32,8 @@
 Este material é apresentado como parte de uma série de minicursos que serão ministrados sobre tópicos variados com o intuito de \textit{nivelar} o conhecimento dos alunos com relação a conceitos básicos que não estão inclusos nas ementas das disciplinas regulares do curso, bem como colocá-los em contato com ferramentas úteis e boas práticas da Computação.
 
 Os conteúdos são dispostos aqui apenas como um apanhado geral com o objetivo de prover um embasamento mínimo e recomenda-se que outras fontes de pesquisa sejam utilizadas para o aprofundamento nestes assuntos.
+
+
 
 \input{contents/intro_writing} %Introdução à escrita científica
 
