--- a/2013-2/contents/intro_writing.tex
+++ b/2013-2/contents/intro_writing.tex
@@ -15,13 +15,14 @@ A normas são definidas não de maneira aleatória, mas levando em consideraçã
 \item Bibliografia.
 \end{itemize}
 
-Estes são apenas alguns dos detalhes que são exigidos e fica claro que a correta formatação de um documento é um processo que acaba ocupando uma grande parte do tempo dedicado à escrita do mesmo e a utilização de ferramentas que automatizem e facilitem este processo são sempre bem vindas. Uma destas ferramentas é o \LaTeX.
+Como estes detalhes são difíceis de serem capturados em palavras e regras, mostra-se abaixo o mesmo documento formatado de maneira a atender as regras de formatação para cada entidade.
 
-Como a visualização desses detalhes supra citados é difícil de ser capturado em palavras e regras, mostram-se abaixo o mesmo documento formatado de maneira a atender as regras de formatação para cada entidade.
+Como exemplo do formato utilizado no padrão de conferências do IEEE, a página \pageref{IEEE} mostra o estilo de formatação necessário para submissão. Este formato é muito requisitado nos congressos internacionais e até mesmo para alguns eventos da SBC.
 
-Como exemplo do formato utilizado no padrão de conferências do IEEE, a página 3 mostra o estilo de formatação necessário para submissão. Este formato é muito requisitado nos congressos internacionais e até mesmo para alguns eventos da SBC.
+No entanto, alguns congressos da SBC utilizam também formato próprio. Esse formato pode ser analisado na página \pageref{SBC}
 
-No entanto, alguns congressos da SBC utilizam também formato próprio. Esse formato pode ser analisado na página 4, 5.
+\label{IEEE}\includepdf{contents/intro_writing_conference/intro_writing_ieee.pdf}
+\label{SBC}\includepdf[pages=1-]{contents/intro_writing_conference/intro_writing_sbc.pdf}
 
-\label{IEEE}\includepdf{contents/intro_writing_congress/intro_writing_ieee.pdf}
-\label{SBC}\includepdf[pages=1-]{contents/intro_writing_congress/intro_writing_sbc.pdf}
+%Estes são apenas alguns dos detalhes que são exigidos e fica claro que a correta formatação de um documento é um processo que acaba ocupando uma grande parte do tempo dedicado à escrita do mesmo e a utilização de ferramentas que automatizem e facilitem este processo são sempre bem vindas. Uma destas ferramentas é o \LaTeX.
+
