mostrar apenas uma pagina de cada pdf

--- a/2013-2/contents/intro_writing.tex
+++ b/2013-2/contents/intro_writing.tex
@@ -22,7 +22,7 @@ Como exemplo do formato utilizado no padrão de conferências do IEEE, a página
 No entanto, alguns congressos da SBC utilizam também formato próprio. Esse formato pode ser analisado na página \pageref{SBC}
 
 \label{IEEE}\includepdf{contents/intro_writing_conference/intro_writing_ieee.pdf}
-\label{SBC}\includepdf[pages=1-]{contents/intro_writing_conference/intro_writing_sbc.pdf}
+\label{SBC}\includepdf{contents/intro_writing_conference/intro_writing_sbc.pdf}
 
 %Estes são apenas alguns dos detalhes que são exigidos e fica claro que a correta formatação de um documento é um processo que acaba ocupando uma grande parte do tempo dedicado à escrita do mesmo e a utilização de ferramentas que automatizem e facilitem este processo são sempre bem vindas. Uma destas ferramentas é o \LaTeX.
 
